Use a bit more width for layout and revert overflow fix removal

--- a/css/main.css
+++ b/css/main.css
@@ -174,3 +174,9 @@ body.dark pre {
     /* 768px */
   ;
 }
+
+.w-228 {
+  width: 57rem
+    /* 912px */
+  ;
+}
